--- a/index.html
+++ b/index.html
@@ -13,19 +13,14 @@
     <!--Optional JavaScript-->
     <div class="container">
         <div class="row">
-            <div class="col-3 bg-light">
-                <h1>Header</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-2 bg-primary">
+            <div class="col-sm-2 col-md-6 col-lg-12 bg-primary">
                 <h1>Grid 1</h1>
             </div>
-            <div class="col-5 bg-danger">
+            <div class="col-sm-8 bg-danger">
                 <h1>Grid 2</h1>
             </div>
-            <div class="col-2 bg-success">
-                <h1>Grid 3</h1>
+            <div class="col-sm-2 bg-success">
+                <h1>Grid 2</h1>
             </div>
         </div>
     </div>
