--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
 <body>
     <!--Optional JavaScript-->
     <div class="container">
+        <h1 class="text-center">Buttons and Colors</h1>
         <div class="row">
-            <div class="col-sm-2 col-md-6 col-lg-12 bg-primary">
-                <h1>Grid 1</h1>
-            </div>
-            <div class="col-sm-8 bg-danger">
-                <h1>Grid 2</h1>
-            </div>
-            <div class="col-sm-2 bg-success">
-                <h1>Grid 2</h1>
+            <div class="col">
+                <a href="https://facebook.com" target="_blank" class="btn btn-danger">Facebook</a>
+               <div class="btn btn-primary">Hello World!</div>
             </div>
         </div>
     </div>
