sizing and spacing

--- a/index.html
+++ b/index.html
@@ -15,83 +15,18 @@
 <body>
     <!--Optional JavaScript-->
     <div class="container">
-        <h1 class="text-center">Cards</h1>
+        <h1 class="text-center">Sizing and Spacing</h1>
         <div class="row">
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Product Name</h4>
-                    </div>
-                    <div class="card-body">
-                        <p>Descriptions</p>
-                        <button class="btn btn-primary">Buy Now</button>
-                    </div>
+            <div class="col-4">
+                <div class="bg-primary">
+                    <h1 class="text-white text-center px-3 py-3">Hello</h1>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Product Name</h4>
-                    </div>
-                    <div class="card-body">
-                        <p>Descriptions</p>
-                        <button class="btn btn-primary">Buy Now</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Product Name</h4>
-                    </div>
-                    <div class="card-body">
-                        <p>Descriptions</p>
-                        <button class="btn btn-primary">Buy Now</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Product Name</h4>
-                    </div>
-                    <div class="card-body">
-                        <p>Descriptions</p>
-                        <button class="btn btn-primary">Buy Now</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Product Name</h4>
-                    </div>
-                    <div class="card-body">
-                        <p>Descriptions</p>
-                        <button class="btn btn-primary">Buy Now</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Product Name</h4>
-                    </div>
-                    <div class="card-body">
-                        <p>Descriptions</p>
-                        <button class="btn btn-primary">Buy Now</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Product Name</h4>
-                    </div>
-                    <div class="card-body">
-                        <p>Descriptions</p>
-                        <button class="btn btn-primary">Buy Now</button>
-                    </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col-4">
+                <div class="bg-success">
+                    <img class="w-100" src="https://images.pexels.com/photos/2263936/pexels-photo-2263936.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
                 </div>
             </div>
         </div>
